Fix blurry text when hovering over a button

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -51,9 +51,10 @@ h1, h2, h3, h4, h5, h6, p, .button, .title {
   text-align: center;
   text-decoration: none;
   transition: transform .15s;
+  will-change: transform;
 
   &:hover {
-    transform: scale(1.02);
+    transform: perspective(1px) scale(1.02);
   }
 
   @media screen and (width >= 768px) {
